# compute-elasticity

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PILOT_WRITEUP.md  PRD.md  README.md  TODO_full_study.md  backfire_paper_draft.md  preregistration.md  preregistration_backfire.md  pyproject.toml  requirements.txt
data/: problem_ids.json
docs/: gate_minus_1_labeling_guide.md
outputs/: convergence_breakdown.json  diversity_summary.json  entropy_baseline_summary.json  fits_constrained_summary.json  fits_summary.json  gate_minus_1_labels.json  h3_ablation.json  hypothesis_results.json  phase14a_results.json  phase_6_progress.json  recon_extended_results.json  recon_results.json  side_test_progress.json  stratified_problems.json  unimodal_peak_analysis.json  unimodal_sensitivity.json
paper/: backfire_colm_submission.tex  backfire_paper_draft.md  backfire_paper_draft_v3.md  backfire_paper_draft_v4.md  references.bib  references_colm.bib
pilot/: analysis.py  config.py  data_loader.py  diversity.py  fitting.py  prompts.py  sampling.py  scoring.py  validation.py
scripts/: analyze_unimodal_peaks.py  analyze_unimodal_sensitivity.py  api_failover_parity.py  compute_h3_n4_features.py  extraction_rate_check.py  finalize_preregistration.py  run_analysis.py  run_cross_model.py  run_diversity.py  run_fitting.py  run_fitting_constrained.py  run_gate.py  run_gate_minus_1.py  run_h3_ablation.py  run_main_pilot.py  run_model2_gate.py  run_model2_sampling.py  run_phase13_analysis.py  run_phase13_sampling.py  run_phase14a_analysis.py  run_phase14a_reanalysis.py  run_realizable.py  (+7 more)
(+819 files in other folders)
