[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "compute-elasticity-pilot"
version = "0.1.0"
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["pilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "falsification.py"]
python_functions = ["test_*"]
addopts = "--tb=short"
